added support for remote error report to main jar build and removed the web console configuration from development mode

--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -228,20 +228,15 @@
                                     <artifactId>org.apache.felix.configadmin</artifactId>
                                     <version>${felix-configadmin-version}</version>
                                 </artifactItem>
-                                <artifactItem>
+<!--                                <artifactItem>
                                     <groupId>org.apache.felix</groupId>
                                     <artifactId>org.apache.felix.metatype</artifactId>
                                     <version>${felix-metatype-version}</version>
-                                </artifactItem>
+                                </artifactItem>-->
                                 <artifactItem>
                                     <groupId>org.apache.felix</groupId>
                                     <artifactId>org.apache.felix.fileinstall</artifactId>
                                     <version>${felix-file-install-version}</version>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.apache.felix</groupId>
-                                    <artifactId>org.apache.felix.webconsole.all</artifactId>
-                                    <version>${felix-webconsole-version}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.github.kevinsawicki</groupId>
