--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -154,3 +154,11 @@ felix.log.level=1
 #org.osgi.service.http.port=8080
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
 org.osgi.framework.bootdelegation=org.netbeans.lib.profiler.server,org.netbeans.lib.profiler.server.*
+
+# remote services properties
+org.amdatu.remote.discovery.configured.endpoints=http://localhost:8181/org.amdatu.remote.discovery.configured
+org.apache.felix.http.host=localhost
+org.osgi.service.http.port=7080
+#org.amdatu.remote.admin.http.host=127.0.0.1
+#org.amdatu.remote.admin.http.port=8282
+#felix.fileinstall.log.level=10
