--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <log4jVersion>2.0-rc1</log4jVersion>
         <guavaVersion>16.0.1</guavaVersion>
         <gsonVersion>2.3.1</gsonVersion>
-        <commonsLangVersion>3.1</commonsLangVersion>
+        <commonsLangVersion>3.4</commonsLangVersion>
         <commonsCsvVersion>1.2</commonsCsvVersion>
         <commonsIoVersion>2.4</commonsIoVersion>
         <commons-fileupload-version>1.3.1</commons-fileupload-version>
@@ -30,11 +30,13 @@
         <felixMainVersion>5.2.0</felixMainVersion>
         <felix-scr-version>1.8.2</felix-scr-version>
         <felix-http-version>2.3.2</felix-http-version>
-        <felix-configadmin-version>1.8.8</felix-configadmin-version>
+        <felix-configadmin-version>1.8.8</felix-configadmin-version>    
         <felix-metatype-version>1.0.10</felix-metatype-version>
         <felix-webconsole-version>4.2.4</felix-webconsole-version>
         <felix-bundlerepository-version>2.0.2</felix-bundlerepository-version>
-        <org.osgi.compendium-version>4.3.1</org.osgi.compendium-version>
+        <org.osgi.compendium-version>5.0.0</org.osgi.compendium-version>
+        <org.lorainelab.igb.remote.services-version>1.0.0</org.lorainelab.igb.remote.services-version>
+        <org.osgi.service.remoteserviceadmin-version>1.1.0</org.osgi.service.remoteserviceadmin-version>
         <bindlib-version>2.4.0</bindlib-version>
         <osgiObrServiceVersion>1.0.2</osgiObrServiceVersion>
         <fusionVersion>1.0.1</fusionVersion>
@@ -122,7 +124,7 @@
         <module>plugins/Keybinding-registry</module>
         <module>plugins/cache</module>
         <module>plugins/cache-api</module>
-        <module>plugins/org.lorainelab.igb.error.reporter.api</module>
+        <module>plugins/org.lorainelab.igb.error.reporter.manager</module>
         <module>plugins/feedback</module>
         <module>plugins/external-sort</module>
         <module>plugins/narrowpeak</module>
@@ -495,6 +497,11 @@
             <dependency>
                 <groupId>org.lorainelab.igb</groupId>
                 <artifactId>org.lorainelab.igb.error.reporter.api</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lorainelab.igb</groupId>
+                <artifactId>org.lorainelab.igb.error.reporter.manager</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
@@ -698,10 +705,39 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>org.apache.felix.webconsole.all</artifactId>
-                <version>${felix-webconsole-version}</version>
+                <artifactId>org.apache.felix.gogo.runtime</artifactId>
+                <version>0.16.2</version>
             </dependency>
-                       
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.gogo.shell</artifactId>
+                <version>0.12.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.gogo.command</artifactId>
+                <version>0.16.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.shell.remote</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+            <!--            <dependency>
+                <groupId>org.amdatu</groupId>
+                <artifactId>org.amdatu.configurator.api</artifactId>
+                <version>1.0.1</version>
+            </dependency>-->
+            <!--            <dependency>
+                <groupId>org.amdatu</groupId>
+                <artifactId>org.amdatu.configurator.properties</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.amdatu</groupId>
+                <artifactId>org.amdatu.configurator.shell</artifactId>
+                <version>1.0.1</version>
+            </dependency>-->
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.osgi.service.obr</artifactId>
@@ -718,17 +754,60 @@
                 <version>5.2.0</version>
             </dependency>
             <dependency>
+                <groupId>org.lorainelab.igb</groupId>
+                <artifactId>org.lorainelab.igb.remote.services.commons</artifactId>
+                <version>${org.lorainelab.igb.remote.services-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lorainelab.igb</groupId>
+                <artifactId>org.lorainelab.igb.remote.services.discovery.provider.configured</artifactId>
+                <version>${org.lorainelab.igb.remote.services-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lorainelab.igb</groupId>
+                <artifactId>org.lorainelab.igb.remote.services.topology.manager</artifactId>
+                <version>${org.lorainelab.igb.remote.services-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lorainelab.igb</groupId>
+                <artifactId>org.lorainelab.igb.remote.services.distribution.provider.http</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.dependencymanager</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.dependencymanager.shell</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.3.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.3.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.3.5</version>
+            </dependency>
+            <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.compendium</artifactId>
-                <version>5.0.0</version>
+                <version>${org.osgi.compendium-version}</version>
             </dependency>
-            
             <dependency>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bndlib</artifactId>
                 <version>${bindlib-version}</version>
             </dependency>
-
             <dependency>
                 <groupId>be.pwnt</groupId>
                 <artifactId>jflow</artifactId>
@@ -881,6 +960,26 @@
                 <groupId>fi.iki.elonen</groupId>
                 <artifactId>NanoHTTPD</artifactId>
                 <version>2.0.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.http.servlet-api</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.http.jetty</artifactId>
+                <version>2.2.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.log</artifactId>
+                <version>1.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>org.osgi.service.remoteserviceadmin</artifactId>
+                <version>${org.osgi.service.remoteserviceadmin-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
