completed work on supporting arbitrary menu weighting and converting old ContextualPopupListener instances to new context menu api

--- a/plugins/NCBIBlast/pom.xml
+++ b/plugins/NCBIBlast/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>igb-genoviz-extensions</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.lorainelab.igb</groupId>
+            <artifactId>context-menu-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
