--- a/core/context-menu-api/pom.xml
+++ b/core/context-menu-api/pom.xml
@@ -78,6 +78,10 @@
                     </instructions>
                 </configuration>
             </plugin>  
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+            </plugin>
         </plugins>
     </build>
 </project>
