completed FileChoosers to javaFX FileChoosers

--- a/plugins/Bookmark/pom.xml
+++ b/plugins/Bookmark/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>synonym-lookup</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.lorainelab.igb</groupId>
+            <artifactId>igb-javafx-util</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
