--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -2,12 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.affymetrix</groupId>
+        <groupId>org.lorainelab.igb</groupId>
         <artifactId>igb-project</artifactId>
         <version>9.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <groupId>com.affymetrix</groupId>
     <artifactId>shared-lib-wrapper</artifactId>
     
     <packaging>bundle</packaging>
@@ -147,7 +146,7 @@
                                     <version>${genovizVersion}</version>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>com.affymetrix</groupId>
+                                    <groupId>org.lorainelab.igb</groupId>
                                     <artifactId>shared-lib-wrapper</artifactId>
                                     <version>${project.version}</version>
                                 </artifactItem>
