--- a/plugins/ApolloLibrary/pom.xml
+++ b/plugins/ApolloLibrary/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.affymetrix</groupId>
+        <groupId>org.lorainelab.igb</groupId>
         <artifactId>igb-project</artifactId>
         <version>9.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <groupId>com.affymetrix</groupId>
+    <groupId>org.lorainelab.igb</groupId>
     <artifactId>apollo-library</artifactId>
 
     <packaging>bundle</packaging>
